flisp (0.15-1) trixie; urgency=medium

  * Added flisp-common and flisp-doc package.
  * Added primitive: nreverse.
  * Added core function: map.
  * Added cl.lsp - WIP
 -- Georg Lehner <jorge@magma-soft.at>  Sat, 27 Dec 2025 20:39:12 +0200

flisp (0.14-1) trixie; urgency=medium

  * Initial Debian packaging of fLisp.
 -- Georg Lehner <jorge@magma-soft.at>  Sat, 27 Dec 2025 20:39:12 +0200