@@ -276,7 +276,7 @@
     <dt>double</dt>
     <dd>Double precission IEEE floating point number. Only available in fLisp interpreters with double support.</dd>
     <dt><dfn>string</dfn></dt>
-    <dd>Character array.</dd>
+    <dd>Character array. UTF-8 aware.</dd>
     <dt><dfn>cons</dfn></dt>
     <dd>Object holding two pointers to objects.</dd>
     <dt><dfn>symbol</dfn></dt>
