@@ -72,6 +72,7 @@
     <li>Debian packages <code>flisp</code> and <code>flisp-dev</code>&nbsp;can be built.</li>
     <li><i>fLisp</i> can be embedded now in other applications without the need for the <i>Femto</i> or <i>fLisp</i>
     sources.</li>
+    <li>Basic Unicode / UTF-8 support is added.</li>
   </ul>
   <nav>
     <a href="#top">^</a>
