@@ -1235,7 +1235,10 @@ Object *readExpr(Interpreter *interp, FILE *fd)
             return readNumberOrSymbol(interp, fd);
         }
         else
-            exception(interp, invalid_read_syntax, "unexpected character 0x%02X", ch);
+            if (ch & 0x80)
+                exception(interp, invalid_read_syntax, "unexpected character: 0x%02X", ch);
+            else
+                exception(interp, invalid_read_syntax, "unexpected character: '%c'", ch);
     }
 }
 
@@ -2230,6 +2233,14 @@ Object *stringAppend(Interpreter *interp, Object **args, Object **env)
     return str;
 }
 
+/* Note: this is not needed in the core. It should go to an extension. */
+Object *byteLength(Interpreter *interp, Object **args, Object **env)
+{
+    return newInteger(interp, strlen(FLISP_ARG_ONE->string));
+}
+
+/// UTF-8 handling ////////////
+
 /* encoded character size */
 size_t utf8_ec_size(char c)
 {
@@ -2241,11 +2252,15 @@ size_t utf8_ec_size(char c)
 
 }
 
-/** utf8_char_index() - char offset or string index
+/** utf8_char_index() - char offset of string index
+ *
+ * @param interp .. interpreter into which to throw exceptions.
+ * @param string .. string to index.
+ * @param index  .. number of encoded characters for which to find offset.
  *
  * @returns: character offset into string corresponding to utf8
  * encoded character at position index */
-size_t utf8_char_index(Interpreter *interp, char *string, size_t index, size_t *n_ec)
+size_t utf8_char_index(Interpreter *interp, char *string, size_t index)
 {
     size_t n = 0, i = 0, l = 0;
 
@@ -2256,9 +2271,51 @@ size_t utf8_char_index(Interpreter *interp, char *string, size_t index, size_t *
         i += l;
         n++;
     }
-    if (n_ec != NULL)
-        *n_ec = n;
     return i;
+}
+
+/** utf8_ec_count() - number of encoded characters in string
+ *
+ * @param interp .. interpreter into which to throw exceptions.
+ * @param string .. string in which to count encoded characters.
+ * @param len    .. maximum number of char's to check.
+ *
+ * @returns: count of encoded characters, i.e. len of UTF-8 encoded unicode string.
+ */
+size_t utf8_ec_count(Interpreter *interp, char *string, size_t len)
+{
+    size_t n = 0, i = 0, l = 0;
+
+    while (string[i] != '\0' && i < len) {
+        l = utf8_ec_size(string[i]);
+        if (l == 0)
+            exception(interp, invalid_value, "utf8_ec_count(): string not utf-8 encoded");
+        i += l;
+        n++;
+    }
+    return n;
+}
+
+Object *stringLength(Interpreter *interp, Object **args, Object **env)
+{
+    return newInteger(interp, utf8_ec_count(interp, FLISP_ARG_ONE->string, SIZE_MAX));
+}
+
+/** (string-search needle haystack)
+ *
+ */
+Object *stringSearch(Interpreter *interp, Object **args, Object **env)
+{
+    char *pos;
+
+    pos = strstr(FLISP_ARG_TWO->string, FLISP_ARG_ONE->string);
+    if (pos == NULL)
+        return nil;
+        
+    return newInteger(
+        interp,
+        utf8_ec_count(interp, FLISP_ARG_TWO->string, pos - FLISP_ARG_TWO->string)
+        );
 }
 
 /** (substring string [start [end]]) - return substring of string within range [start, end)
@@ -2267,24 +2324,21 @@ size_t utf8_char_index(Interpreter *interp, char *string, size_t index, size_t *
  * @param start    Start index, 0 based
  * @param end      End index, not included
  *
- * @return Substring of string starting from end until character
+ * @return Substring of string starting from start until character
  * end-1. Length of string is default for *end*, 0 is default for
  * *start*.
  */
-#if 0
 Object *stringSubstring(Interpreter *interp, Object **args, Object **env)
 {
-    size_t start = 0, end, len, newlen;
+    int64_t start = 0, end, len;
 
     FLISP_CHECK_TYPE(FLISP_ARG_ONE, type_string, "(substring string [start [end]]) - string");
 
     if (*(FLISP_ARG_ONE->string) == '\0')
         return flisp_empty_string;
 
-    len = strlen(FLISP_ARG_ONE->string);
-    //(void)utf8_char_index(interp, FLISP_ARG_ONE->string, SIZE_MAX, &len);
-    end = start + len;
-
+    end = len = utf8_ec_count(interp, FLISP_ARG_ONE->string, SIZE_MAX);
+    
     if (FLISP_HAS_ARG_TWO) {
         FLISP_CHECK_TYPE(FLISP_ARG_TWO, type_integer, "(substring string [start [end]]) - start");
         start = (FLISP_ARG_TWO->integer);
@@ -2310,68 +2364,20 @@ Object *stringSubstring(Interpreter *interp, Object **args, Object **env)
     if (start > end)
         exceptionWithObject(interp, FLISP_ARG_TWO, range_error,
                             "(substring string [start [end]]) - end > start");
-    newlen = end - start;
-    char *buf = strdup(FLISP_ARG_ONE->string+start);
-    if (buf == NULL)
-        exception(interp, out_of_memory, "OOM allocating buffer for (substring)\n");
-    Object *new = newStringWithLength(interp, buf, newlen+1);
-    free(buf);
-    new->string[newlen] = '\0';
-
-    return new;
-}
-#else
-Object *stringSubstring(Interpreter *interp, Object **args, Object **env)
-{
-    size_t start = 0, end, len, ec_len;
-
-    FLISP_CHECK_TYPE(FLISP_ARG_ONE, type_string, "(substring string [start [end]]) - string");
-
-    if (*(FLISP_ARG_ONE->string) == '\0')
-        return flisp_empty_string;
-
-    (void)utf8_char_index(interp, FLISP_ARG_ONE->string, SIZE_MAX, &len);
-    end = start + len;
-
-    if (FLISP_HAS_ARG_TWO) {
-        FLISP_CHECK_TYPE(FLISP_ARG_TWO, type_integer, "(substring string [start [end]]) - start");
-        start = (FLISP_ARG_TWO->integer);
-        if (start < 0)
-            start = end + start;
-        if ((*args)->cdr->cdr != nil) {
-            FLISP_CHECK_TYPE(FLISP_ARG_THREE, type_integer, "(substring string [start [end]]) - end");
-            if (FLISP_ARG_THREE->integer < 0)
-                end = end + FLISP_ARG_THREE->integer;
-            else
-                end = FLISP_ARG_THREE->integer;
-        }
-    }
-    if (start < 0 || start > len)
-        exceptionWithObject(interp, FLISP_ARG_TWO, range_error,
-                            "(substring string [start [end]]) - start out of range");
-    if (end < 0 || end > len)
-        exceptionWithObject(interp, FLISP_ARG_THREE, range_error,
-                            "(substring string [start [end]]) - end out of range");
-    if (start == end)
-        return flisp_empty_string;
-
-    if (start > end)
-        exceptionWithObject(interp, FLISP_ARG_TWO, range_error,
-                            "(substring string [start [end]]) - end > start");
-    ec_len = end - start;
-    start = utf8_char_index(interp, FLISP_ARG_ONE->string, start, NULL);
+    len = end - start;
+    start = utf8_char_index(interp, FLISP_ARG_ONE->string, start);
     char *buf = strdup(FLISP_ARG_ONE->string+start);
     if (buf == NULL)
         exception(interp, out_of_memory, "OOM allocating buffer for (substring)\n");
 
-    len = utf8_char_index(interp, buf, ec_len, NULL);
+    /* Repurpose len for char length */
+    len = utf8_char_index(interp, buf, len);
     Object *new = newStringWithLength(interp, buf, len+1);
     free(buf);
     new->string[len] = '\0';
 
     return new;
 }
-#endif
 
 // (string-compare s1 s2)
 Object *stringCompare(Interpreter *interp, Object **args, Object **env)
@@ -2379,69 +2385,27 @@ Object *stringCompare(Interpreter *interp, Object **args, Object **env)
     return newInteger(interp, strcmp(FLISP_ARG_ONE->string, FLISP_ARG_TWO->string));
 }
 
-Object *byteLength(Interpreter *interp, Object **args, Object **env)
-{
-    return newInteger(interp, strlen(FLISP_ARG_ONE->string));
-}
-
-#if 0
-Object *stringLength(Interpreter *interp, Object **args, Object **env)
-{
-    size_t n = 0, l = 0;
-    char *i = FLISP_ARG_ONE->string;
-
-    while (*i != '\0') {
-        l = utf8_ec_size(*i);
-        if (l == 0)
-            exceptionWithObject(interp, FLISP_ARG_ONE, invalid_value, "(string-length s) - s not utf-8 encoded");
-        i += l;
-        n++;
-    }
-    return newInteger(interp, n);
-}
-#else
-Object *stringLength(Interpreter *interp, Object **args, Object **env)
-{
-    size_t n;
-    (void)utf8_char_index(interp, FLISP_ARG_ONE->string, SIZE_MAX, &n);
-    return newInteger(interp, n);
-}
-#endif
-
-/** (string-search needle haystack)
- *
- */
-Object *stringSearch(Interpreter *interp, Object **args, Object **env)
-{
-    char *pos, *buf;
-    size_t n;
-
-    /* Note: inefficient */
-    buf = strdup(FLISP_ARG_TWO->string);
-    if (buf == NULL)
-        exception(interp, out_of_memory, "OOM allocating buffer for (substring)\n");
-    pos = strstr(buf, FLISP_ARG_ONE->string);
-    if (pos) {
-        *pos = '\0';
-        (void)utf8_char_index(interp, buf, SIZE_MAX, &n);
-        free(buf);
-        return newInteger(interp, n);
-    }
-    free(buf);
-    return nil;
-}
-
+/* Note: This should be
+   a) renamed to (code-char)
+   b) rewritten to convert a unicode code point into a unicode char string and
+   c) moved to an extension.
+*/
 Object *asciiToString(Interpreter *interp, Object **args, Object **env)
 {
     char ch[2];
     if (FLISP_ARG_ONE->integer < 0 || FLISP_ARG_ONE->integer > 255)
-        exceptionWithObject(interp, FLISP_ARG_ONE, range_error, "(ascii num) - num is not in range 0-255");
+        exceptionWithObject(interp, FLISP_ARG_ONE, range_error,
+                            "(ascii num) - num is not in range 0-255");
 
     ch[0] = (unsigned char)FLISP_ARG_ONE->integer;
     ch[1] = '\0';
     return newStringWithLength(interp, ch, 1);
 }
 
+/* Note: This should be
+   a) renamed to (char-code)
+   b) rewriten to convert the first encoded character of string to the codepoint and
+   c) moved to an extension. */
 Object *asciiToInteger(Interpreter *interp, Object **args, Object **env)
 {
     if (strlen(FLISP_ARG_ONE->string) < 1)
@@ -2603,12 +2567,12 @@ bool flisp_primitives_register(Interpreter *interp)
         && flisp_register_primitive(interp, "<<",            2,  2, type_integer,   integerShiftLeft)
         && flisp_register_primitive(interp, ">>",            2,  2, type_integer,   integerShiftRight)
         && flisp_register_primitive(interp, "~",             1,  1, type_integer,   integerNot)
-        && flisp_register_primitive(interp, "string-compare",2,  2, type_string,    stringCompare)
+        && flisp_register_primitive(interp, "string-append", 2,  2, type_string,    stringAppend)
         && flisp_register_primitive(interp, "byte-length",   1,  1, type_string,    byteLength)
         && flisp_register_primitive(interp, "string-length", 1,  1, type_string,    stringLength)
-        && flisp_register_primitive(interp, "string-append", 2,  2, type_string,    stringAppend)
-        && flisp_register_primitive(interp, "substring",     1,  3, nil,            stringSubstring)
         && flisp_register_primitive(interp, "string-search", 2,  2, type_string,    stringSearch)
+        && flisp_register_primitive(interp, "substring",     1,  3, nil,            stringSubstring)
+        && flisp_register_primitive(interp, "string-compare",2,  2, type_string,    stringCompare)
         && flisp_register_primitive(interp, "ascii",         1,  1, type_integer,   asciiToString)
         && flisp_register_primitive(interp, "ascii->number", 1,  1, type_string,    asciiToInteger)
         && flisp_register_primitive(interp, "interp",        1, -1, nil,            primitiveInterp);
