@@ -5,7 +5,7 @@
 
 export FLISPRC=
 
-tap 187
+tap 198
 
 [ -x ../flispd ]
 ok flisp-1 flisp exists and is executable;
@@ -21,7 +21,10 @@ IN='"' ERR='unexpected end of stream in string literal'
 flisp_err; ok reader-2 incomplete string error msg
 
 IN='}' OBJ="" ERR="unexpected character: '}'"
-flisp_err; ok reader-3 unexpected character error msg
+flisp_err; ok reader-3-1 unexpected ascii character error msg
+
+IN='ä' OBJ="" ERR="unexpected character: 0xC3"
+flisp_err; ok reader-3-2 unexpected unicode character error msg
 
 IN="0" OUT='0'
 flisp_expr; ok reader-4-1 read integer 0
@@ -47,35 +50,41 @@ flisp_expr; ok reader-5 read constant t
 IN="nil" OUT='nil'
 flisp_expr; ok reader-6 read constant nil
 
+IN='"answer"' OUT='"answer"'
+flisp_expr; ok reader-7-1 read ascii string is string
+
+IN='"änßwér"' OUT='"änßwér"'
+flisp_expr; ok reader-7-2 read unicode string is string
+
 IN="()" OUT='nil'
-flisp_expr; ok reader-7 read empty list
+flisp_expr; ok reader-8 read empty list
 
 IN="(quote a)" OUT='a'
-flisp_expr; ok reader-8 read quote-ed yields symbol
+flisp_expr; ok reader-9 read quote-ed yields symbol
 
 IN="'a" OUT='a'
-flisp_expr; ok reader-9 read tick-quoted yields symbol
+flisp_expr; ok reader-10 read tick-quoted yields symbol
 
 IN=":a" OUT='a'
-flisp_expr; ok reader-10 read colon-quoted yields symbol
+flisp_expr; ok reader-11 read colon-quoted yields symbol
 
 IN="'(0 (\"a\" b))" OUT='(0 ("a" b))'
-flisp_expr; ok reader-11 read nested list
+flisp_expr; ok reader-12 read nested list
 
 IN="'(0 . 1)" OUT='(0 . 1)'
-flisp_expr; ok reader-12 read dotted pair
+flisp_expr; ok reader-13 read dotted pair
 
 IN="'(0 1 . 2)" OUT='(0 1 . 2)'
-flisp_expr; ok reader-13 read dotted list
+flisp_expr; ok reader-14 read dotted list
 
 IN="'(0 1 . 2 3)" ERR="unexpected object at end of dotted list" OBJ=
-flisp_err; ok reader-14 read dotted list with extra element
+flisp_err; ok reader-15 read dotted list with extra element
 
 IN="'(0 1 .)" ERR="expected object at end of dotted list" OBJ=
-flisp_err; ok reader-15 read dotted list without cdr
+flisp_err; ok reader-16 read dotted list without cdr
 
 IN="'(" ERR="unexpected end of stream in list" OBJ=
-flisp_err; ok reader-16 read list without end
+flisp_err; ok reader-17 read list without end
 
 # Special forms
 IN='(quote)' ERR='expects at least 1 arguments' OBJ='#<Primitive quote>'
@@ -431,20 +440,41 @@ IN='(~ 7)' OUT='-8' flisp_expr; ok not-1 not 7 is -8
 
 ## Strings
 
-IN='(string-compare "a" "a")' OUT="0" flisp_expr; ok string-compare-1 same strings compare 0
-IN='(string-compare "a" "b")' OUT="-1" flisp_expr; ok string-compare-2 a less then b
-IN='(string-compare "b" "a")' OUT="1" flisp_expr; ok string-compare-1 b greater then a
-
-IN='(string-length "")' OUT="0" flisp_expr; ok string-length-1 length of emtpy string is 0
-IN='(string-length "answer")' OUT="6" flisp_expr; ok string-length-2  length of answer string is 6
-
 IN='(string-append "ans" "wer")' OUT='"answer"'
 flisp_expr; ok string-append-1 string append of ans wer is answer
 IN='(string-append "answer" "")' OUT='"answer"'
-flisp_expr; ok string-append-2  append answer emtpy is anser
+flisp_expr; ok string-append-2  append answer emtpy is answer
+IN='(string-append "änß" "wér")' OUT='"änßwér"'
+flisp_expr; ok string-append-3 string append of unicode is string
 
 IN='(string-append "" "answer")' OUT='"answer"'
 flisp_expr; ok string-append-3  append emtpy answer is anser
+
+IN='(byte-length "")' OUT="0" flisp_expr; ok byte-length-1 length of emtpy string is 0
+IN='(byte-length "answer")' OUT="6" flisp_expr; ok byte-length-2  length of answer string is 6
+IN='(byte-length "änßwér")' OUT="9" flisp_expr; ok byte-length-3  length of 3 unicode 3 ascii string is 9
+
+IN='(string-length "")' OUT="0" flisp_expr; ok string-length-1 length of emtpy string is 0
+IN='(string-length "answer")' OUT="6" flisp_expr; ok string-length-2  length of answer string is 6
+IN='(string-length "änßwér")' OUT="6" flisp_expr; ok string-length-3  length of 3 unicode 3 ascii string is 6
+
+IN='(string-search "" "")' OUT='0'
+flisp_expr; ok string-search-1 emtpy string is contained in empty string at 0
+
+IN='(string-search "" "abcde")' OUT='0'
+flisp_expr; ok string-search-2 emtpy string is contained in string at 0
+
+IN='(string-search "ab" "abcde")' OUT='0'
+flisp_expr; ok string-search-3 start string is contained in string at 0
+
+IN='(string-search "bc" "abcde")' OUT='1'
+flisp_expr; ok string-search-4 not start string is contained in string at 1
+
+IN='(string-search "bc" "äbcdé")' OUT='1'
+flisp_expr; ok string-search-4-1  in unicode prefix string at 1
+
+IN='(string-search "x" "abcde")' OUT='nil'
+flisp_expr; ok string-search-5 not contained string is nil
 
 IN='(substring "")' OUT='""'
 flisp_expr; ok substring-1 substring empty is empty
@@ -465,37 +495,30 @@ IN='(substring "answer" 1 -3)' OUT='"ns"'
 flisp_expr; ok substring-6 substring answer 1 -3 ns
 
 IN='(substring "answer" -3 -1)' OUT='"we"'
-flisp_expr; ok substring-6 substring answer -3 -1 we
+flisp_expr; ok substring-7 substring answer -3 -1 we
+
+IN='(substring "änßwér" -3 -1)' OUT='"wé"'
+flisp_expr; ok substring-7-1 substring in 3 unicode 2 ascii string
 
 IN='(substring "answer" 7)' ERR='(substring string [start [end]]) - start out of range' OBJ=
-flisp_err; ok substring-7 substring answer 7 range-error
+flisp_err; ok substring-8 substring answer 7 range-error
 
 IN='(substring "answer" -7)' ERR='(substring string [start [end]]) - start out of range' OBJ=
-flisp_err; ok substring-8 substring answer -7 range-error
+flisp_err; ok substring-9 substring answer -7 range-error
 
 IN='(substring "answer" 1 7)' ERR='(substring string [start [end]]) - end out of range' OBJ=
-flisp_err; ok substring-9 substring answer 1 7 range-error
-
-IN='(substring "answer" 1 -7)' ERR='(substring string [start [end]]) - end out of range' OBJ=
 flisp_err; ok substring-10 substring answer 1 7 range-error
 
+IN='(substring "answer" 1 -7)' ERR='(substring string [start [end]]) - end out of range' OBJ=
+flisp_err; ok substring-11 substring answer 1 7 range-error
+
 IN='(substring "answer" 2 1)' ERR='(substring string [start [end]]) - end > start' OBJ=
-flisp_err; ok substring-11 substring answer 2 1 range-error
+flisp_err; ok substring-12 substring answer 2 1 range-error
 
-IN='(string-search "" "")' OUT='0'
-flisp_expr; ok string-search-1 emtpy string is contained in empty string at 0
-
-IN='(string-search "" "abcde")' OUT='0'
-flisp_expr; ok string-search-2 emtpy string is contained in string at 0
-
-IN='(string-search "ab" "abcde")' OUT='0'
-flisp_expr; ok string-search-3 start string is contained in string at 0
-
-IN='(string-search "bc" "abcde")' OUT='1'
-flisp_expr; ok string-search-4 not start string is contained in string at 1
-
-IN='(string-search "x" "abcde")' OUT='nil'
-flisp_expr; ok string-search-5 not contained string is nil
+IN='(string-compare "a" "a")' OUT="0" flisp_expr; ok string-compare-1 same strings compare 0
+IN='(string-compare "a" "b")' OUT="-1" flisp_expr; ok string-compare-2 a less then b
+IN='(string-compare "b" "a")' OUT="1" flisp_expr; ok string-compare-3 b greater then a
+IN='(string-compare "a" "ä")' OUT="-98" flisp_expr; ok string-compare-4 a less then umlaut a
 
 IN='(ascii 64)' OUT='"@"'
 flisp_expr; ok ascii-1 ascii 64 is @
