@@ -31,7 +31,7 @@
 : ${SUMMARY:=}
 : ${TEST_ALL=}
 
-FLISP=../flispd
+: ${FLISP:=../flispd}
 FLISP_DEBUG=
 FEMTO_DEBUG=
 
