@@ -4,7 +4,8 @@ flisp (0.15-1) trixie; urgency=medium
   * Added primitive: nreverse.
   * Added core function: map.
   * Added cl.lsp - WIP
- -- Georg Lehner <jorge@magma-soft.at>  Sat, 27 Dec 2025 20:39:12 +0200
+  * Basic Unicode / UTF-8 support.
+-- Georg Lehner <jorge@magma-soft.at>  Fri, 23 Jan 2026 21:39:42 +0200
 
 flisp (0.14-1) trixie; urgency=medium
 
